--- a/kafka/docker-compose.yml
+++ b/kafka/docker-compose.yml
@@ -1,3 +1,5 @@
+version: '3.8'
+
 services:
   zookeeper:
     image: wurstmeister/zookeeper:latest
@@ -5,22 +7,29 @@ services:
     ports:
       - "2181:2181"
 
-  kafka1:
+  kafka:
     image: wurstmeister/kafka:latest
-    container_name: kafka1
+    container_name: kafka
     ports:
       - "9092:9092"
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
+      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_NUM_PARTITIONS: 3
+    depends_on:
+      - zookeeper
 
-  kafka2:
-    image: wurstmeister/kafka:latest
-    container_name: kafka2
+  kafbat-ui:
+    image: ghcr.io/kafbat/kafka-ui:latest
+    container_name: kafbat-ui
     ports:
-      - "9093:9093"
+      - "8080:8080"
     environment:
-      KAFKA_BROKER_ID: 2
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9093
+      DYNAMIC_CONFIG_ENABLED: 'true'
+      KAFKA_CLUSTERS_0_NAME: 'local-cluster'
+      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: 'kafka:9092'
+    depends_on:
+      - kafka
